<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.popularmovies.DetailMovie"
    android:id="@+id/addresses_scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true">



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">


        <ImageView
            android:id="@+id/image_id"
            android:layout_width="540dp"
            android:layout_height="238dp"
            android:contentDescription="@string/detail_movie_vertical_poster_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_id" />

        <TextView
            android:id="@+id/movie_avg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/rating_bar"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />


        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginRight="48dp"
            android:numStars="5"
            android:rating="2.5"
            android:stepSize="0.5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_title_tv">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_movie_release_date_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2dp"/>

            <TextView
                android:id="@+id/movie_release_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_geners_label"
                android:text="@string/detail_movie_geners_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2dp"/>

            <TextView
                android:id="@+id/movie_geners_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_movie_overview_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2dp"
                />

            <TextView
                android:id="@+id/movie_overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2dp"
                 />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_movie_trailers_label"
                android:textSize="16sp"
                android:lineSpacingExtra="2dp"
                android:textStyle="bold"
                />

           <android.support.v7.widget.RecyclerView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:lineSpacingExtra="2dp"
               android:id="@+id/movie_trailers_tv">

           </android.support.v7.widget.RecyclerView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_movie_reviews_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_reviews_tv">
            </android.support.v7.widget.RecyclerView>


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="216dp"
            android:onClick="addToFavoritesDb"
            app:layout_constraintBottom_toTopOf="@+id/rating_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.764"
            app:layout_constraintStart_toStartOf="@+id/movie_avg_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_off"
            app:useCompatPadding="true" />



    </android.support.constraint.ConstraintLayout>
</ScrollView>